force-app/main/default/objects/acn_ttn__ACN_Novasaas_Violation_c__x/acn_ttn__ACN_Novasaas_Violation_c__x.object-meta.xml
<CustomObject>
    <externalDataSource>acn_ttn__NovaSalesforce</externalDataSource>
    <externalName>ACN_Novasaas__Violation__c</externalName>
    <label>Violation</label>
    <pluralLabel>Violations</pluralLabel>
</CustomObject>