force-app/main/default/objects/acn_ttn__ACN_Novasaas_Violation_c__x/fields/acn_ttn__ACN_Novasaas_Governer_Limit_c__c.field-meta.xml
<CustomField>
    <fullName>acn_ttn__ACN_Novasaas_Governer_Limit_c__c</fullName>
    <externalDeveloperName>ACN_Novasaas__Governer_Limit__c</externalDeveloperName>
    <label>Governer Limit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>