force-app/main/default/objects/acn_ttn__ACN_Novasaas_Violation_c__x/fields/acn_ttn__ACN_Novasaas_Old_Priority_c__c.field-meta.xml
<CustomField>
    <fullName>acn_ttn__ACN_Novasaas_Old_Priority_c__c</fullName>
    <externalDeveloperName>ACN_Novasaas__Old_Priority__c</externalDeveloperName>
    <label>Old Priority</label>
    <length>2</length>
    <type>Text</type>
</CustomField>