force-app/main/default/objects/acn_ttn__ACN_Novasaas_Violation_c__x/fields/acn_ttn__ACN_Novasaas_Violation_Count_c__c.field-meta.xml
<CustomField>
    <fullName>acn_ttn__ACN_Novasaas_Violation_Count_c__c</fullName>
    <externalDeveloperName>ACN_Novasaas__Violation_Count__c</externalDeveloperName>
    <label>Violation Count</label>
    <precision>8</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>